# uv-vs-poetry-benchmark

./: .gitignore  README.md
benchmarks/: benchmark_no_lock_results_2026_01_05_155630.json  benchmark_with_lock_results_2026_01_05_155710.json
poetry/: pyproject.toml
uv/: pyproject.toml
uv_vs_poetry/: uv_vs_poetry.py  uv_vs_poetry_no_lock_files.py
