[project]
name = "poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "Nureddin Soltan"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "numpy (>=2,<2.3.0)",
    "django (>=6.0,<7.0)",
    "django-bolt (>=0.4.8,<0.5.0)",
    "django-rest-api (>=0.1.5,<0.2.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "pymongo (>=4.15.5,<5.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "boto3 (>=1.42.21,<2.0.0)",
    "fernet-cli (>=0.0.3,<0.0.4)",
    "pillow (>=12.1.0,<13.0.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "rq (>=2.6.1,<3.0.0)",
    "base32-crockford (>=0.3.0,<0.4.0)",
    "requests (>=2.32.5,<3.0.0)",
    "faker (>=40.1.0,<41.0.0)",
    "ruamel-yaml (>=0.19.1,<0.20.0)",
    "s3cmd (>=2.4.0,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "snakeviz (>=2.2.2,<3.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "xlsxwriter (>=3.2.9,<4.0.0)",
    "ruff (>=0.14.10,<0.15.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "weasyprint (>=67.0,<68.0)",
    "dateparser (>=1.2.2,<2.0.0)",
    "net-tools (>=0.1.2,<0.2.0)",
    "sysstat (>=0.1,<0.2)",
    "gnureadline (>=8.2.13,<9.0.0)",
    "pd (>=0.0.4,<0.0.5)",
    "pympler (>=1.1,<2.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "firebase-admin (>=7.1.0,<8.0.0)",
    "premailer (>=3.10.0,<4.0.0)",
    "sentry-sdk (>=2.48.0,<3.0.0)",
    "langchain (>=1.2.0,<2.0.0)",
    "langchain-openai (>=1.1.6,<2.0.0)",
    "langchain-google-genai (>=4.1.2,<5.0.0)",
    "langchain-anthropic (>=1.3.0,<2.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "qrcode (>=8.2,<9.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pymupdf (>=1.26.7,<2.0.0)",
    "mongomock (>=4.3.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
