[project]
name = "uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "base32-crockford>=0.3.0",
    "bcrypt>=5.0.0",
    "boto3>=1.42.21",
    "cryptography>=46.0.3",
    "dateparser>=1.2.2",
    "django>=6.0",
    "django-bolt>=0.4.8",
    "django-rest-api>=0.1.5",
    "faker>=40.1.0",
    "fastapi>=0.128.0",
    "fernet-cli>=0.0.3",
    "firebase-admin>=7.1.0",
    "gnureadline>=8.2.13",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain>=1.2.0",
    "langchain-anthropic>=1.3.0",
    "langchain-google-genai>=4.1.2",
    "langchain-openai>=1.1.6",
    "loguru>=0.7.3",
    "mongomock>=4.3.0",
    "net-tools>=0.1.2",
    "numpy>=2.4.0",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "pd>=0.0.4",
    "pillow>=12.1.0",
    "pre-commit>=4.5.1",
    "premailer>=3.10.0",
    "pydantic>=2.12.5",
    "pyjwt>=2.10.1",
    "pymongo>=4.15.5",
    "pympler>=1.1",
    "pymupdf>=1.26.7",
    "pytest>=9.0.2",
    "python-multipart>=0.0.21",
    "qrcode>=8.2",
    "requests>=2.32.5",
    "rq>=2.6.1",
    "ruamel-yaml>=0.19.1",
    "ruff>=0.14.10",
    "s3cmd>=2.4.0",
    "sentry-sdk>=2.48.0",
    "snakeviz>=2.2.2",
    "sysstat>=0.1",
    "weasyprint>=67.0",
    "xlsxwriter>=3.2.9",
]
